src/test/ui/type/type-check/cannot_infer_local_or_vec.stderr
error[E0282]: type annotations needed for `Vec<T>`
  --> $DIR/cannot_infer_local_or_vec.rs:2:9
   |
LL |     let x = vec![];
   |         ^
   |
help: consider giving `x` an explicit type, where the type for type parameter `T` is specified
   |
LL |     let x: Vec<T> = vec![];
   |          ++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
